Fixed the phone display squished to the top by adding its media query of position relative and padding 20%

--- a/src/components/AboutUs.css
+++ b/src/components/AboutUs.css
@@ -34,6 +34,10 @@ section#about {
   color: var(--pri-color) !important;
 }
 @media (max-width: 600px) {
+  section#about {
+    position: relative;
+    padding-top: 20%;
+  }
   .space-img img {
     width: 100% !important;
   }
